examples/test/testpolicy17537.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17537
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key6: value13
      key47: value45
      key22: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value13
          key11: value41
      podSelector:
        matchLabels:
          key26: value34
          key47: value4
